# anonys

./: .gitignore  .gitmodules  Example1.code-workspace  Example2.code-workspace  README.md
.github/: copilot-instructions.md
Example1/Config/: AnonysConfig.h  AnonysEventId.h  AnonysFsmId.h  AnonysManualConfig.h
Example1/Fsm/: A.h
Example1/Fsm/A/: St1.cpp  St1a.cpp  St2.cpp
Example1/Fsm/A/St1/: St1a.cpp
Example1/Fsm/_impl/: A_impl.h
Example1/StateMachines/: StateMachineId.h
Example1/States/: A.h  AStates.h  AStatesImpl.h  StateHandlers.h  States.h
Example1/States/A/: St1.cpp  St1.h
Example1/States/_impl/: A.h  A_impl.h
Example1/Terminals/: Log.cpp  Log.h  Std.h  Terminals.h  Timers.h
Example1/anonys/: EventId.h  Fsm.cpp  Fsm.h  FsmId.h  FsmPool.cpp  FsmPool.h  GeneratedConfig.h  ManualConfig.h
Example1/anonys/fsm/: A.h
Example1/anonys/impl/: handlersA.h  terminalsA.h
Example1/env/: DummyTimerService.h  DummyTracingService.h
Example1/fsmDef/: Debouncer.txt  Jukebox.txt  LedJuggler.txt  SemiFab.txt
Example1/platform/nucleoH503RB/: .gitignore  CMakeLists.txt
Example1/platform/nucleoH503RB/Core/Inc/: AnonysManualConfig.h  main.h
Example1/platform/nucleoH503RB/Core/Src/: main.c
Example1/platform/winVs/config/: AnonysManualConfig.h
Example1/platform/winVs/src/: main.cpp
Example1/platform/winVs/vs/: Example1.sln  Example1.vcxproj  Example1.vcxproj.filters
Example1/platform/winVsc/: CMakeLists.txt  CMakePresets.json
Example1/platform/winVsc/config/: AnonysManualConfig.h
Example1/platform/winVsc/src/: main.cpp
Example1/src/: CMakeLists.txt  Events.h  Terminals.h  example.cpp  example.h
Example1/src/Events/: Events.h
Example1/src/Fsm/A/: St1.cpp  St2.cpp
Example1/src/Fsm/A/St1/: St1a.cpp
Example1/src/Fsm/Debouncer/: Initial.cpp  Pressing.cpp  Releasing.cpp
Example1/src/Fsm/Debouncer/Pressing/: Pressed.cpp
Example1/src/Fsm/Debouncer/Releasing/: Released.cpp
Example1/src/Fsm/Jukebox/: Error.cpp  Idle.cpp  Off.cpp  On.cpp  Playing.cpp
Example1/src/Fsm/Jukebox/On/: Idle.cpp  Playing.cpp
Example1/src/Fsm/Jukebox/On/Playing/: Normal.cpp  Paused.cpp
Example1/src/Fsm/Jukebox/Playing/: Paused.cpp
Example1/src/Fsm/Jukebox/Playing/Paused/: AutoPause.cpp
Example1/src/Fsm/LedJuggler/: Running.cpp
Example1/src/Fsm/LedJuggler/Running/: Pattern1.cpp  Pattern2.cpp  Paused.cpp
Example1/src/Fsm/LedJuggler/Running/Pattern1/: BlinkA.cpp  OffA.cpp  OnA.cpp
Example1/src/Fsm/LedJuggler/Running/Pattern2/: BlinkB.cpp  OffB.cpp  OnB.cpp
Example1/src/Fsm/SemiFab/: EmergencyHalt.cpp  Fault.cpp  Offline.cpp  Online.cpp  Startup.cpp
Example1/src/Fsm/SemiFab/EmergencyHalt/: GasShutoff.cpp  Lockout.cpp  PowerDown.cpp  SafeState.cpp
Example1/src/Fsm/SemiFab/Fault/: DiagFault.cpp  RecoverFault.cpp  SafeShutdown.cpp
Example1/src/Fsm/SemiFab/Fault/DiagFault/: CommFault.cpp  HwFault.cpp  SwFault.cpp
Example1/src/Fsm/SemiFab/Fault/RecoverFault/: AutoRecover.cpp  ManualRecover.cpp
Example1/src/Fsm/SemiFab/Online/: BatchControl.cpp  FacilityMonitor.cpp  Idle.cpp  Maintenance.cpp  Processing.cpp  WaferHandling.cpp
Example1/src/Fsm/SemiFab/Online/BatchControl/: LotRunning.cpp  LotSetup.cpp  LotTeardown.cpp
Example1/src/Fsm/SemiFab/Online/FacilityMonitor/: Critical.cpp  Nominal.cpp  Warning.cpp
Example1/src/Fsm/SemiFab/Online/Maintenance/: CalibrationRun.cpp  Cleaning.cpp  Diagnostics.cpp  PartReplace.cpp
Example1/src/Fsm/SemiFab/Online/Processing/: CMPBay.cpp  CleanBay.cpp  DepBay.cpp  EtchBay.cpp  ImplantBay.cpp  InspectBay.cpp  LithographyBay.cpp  PackagingBay.cpp  ThermalBay.cpp
Example1/src/Fsm/SemiFab/Startup/: Calibrating.cpp  Initializing.cpp  SelfTesting.cpp
Example1/src/Terminals/: CustomTerminals.h  EventSender.h  EventSenderService.h  Led.cpp  Led.h  LogService.cpp  LogService.h  PatternTracker.h  Std.h  Terminals.h
Example1/src/anonys/: BufferCalc.cpp  BufferCalc.h  EventId.h  FsmId.h  FsmPool.cpp  FsmPool.h  GeneratedConfig.h
Example1/src/anonys/fsm/: Debouncer.h  Jukebox.h  LedJuggler.h  SemiFab.h
Example1/src/anonys/impl/: handlersDebouncer.h  handlersJukebox.h  handlersLedJuggler.h  handlersSemiFab.h  terminalsA.h  terminalsDebouncer.h  terminalsJukebox.h  terminalsLedJuggler.h  terminalsSemiFab.h
Example1/src/env/: Demo.cpp  Demo.h  Executor.cpp  Executor.h  Expected.cpp  Expected.h  Helper.cpp  Helper.h  Log.cpp  Log.h  Setup.h  TestEventSenderService.cpp  TestEventSenderService.h  TestLog.cpp  TestLog.h  TestTimerService.cpp  TestTimerService.h  TestTracingService.cpp  TestTracingService.h  Tester.cpp  Tester.h
Example2/fsmDef/: Elevator.txt  TrafficLight.txt  Washer.txt
Example2/platform/winVsc/: CMakeLists.txt
Example2/platform/winVsc/config/: AnonysManualConfig.h
Example2/platform/winVsc/src/: main.cpp
Example2/src/: Events.h  Terminals.h
Example2/src/Fsm/Elevator/: Idle.cpp  Moving.cpp  Stopped.cpp
Example2/src/Fsm/Elevator/Moving/: GoingDown.cpp  GoingUp.cpp
Example2/src/Fsm/TrafficLight/: Flashing.cpp  Off.cpp  Operating.cpp
Example2/src/Fsm/TrafficLight/Operating/: Green.cpp  Red.cpp  Yellow.cpp
Example2/src/Fsm/Washer/: Done.cpp  Error.cpp  Halted.cpp  Idle.cpp  Running.cpp
Example2/src/Fsm/Washer/Running/: Draining.cpp  Filling.cpp  Washing.cpp
Example2/src/anonys/: BufferCalc.cpp  BufferCalc.h  EventId.h  FsmId.h  FsmPool.cpp  FsmPool.h  GeneratedConfig.h
Example2/src/anonys/fsm/: Elevator.h  TrafficLight.h  Washer.h
Example2/src/anonys/impl/: handlersElevator.h  handlersTrafficLight.h  handlersWasher.h  terminalsElevator.h  terminalsTrafficLight.h  terminalsWasher.h
anonys/: FsmBase.cpp  FsmBase.h  FsmCore.cpp  FsmCore.h  StateMachineBase.cpp  StateMachineBase.h  Timer.h  TracingService.h  Types.h  Utils.h
dev/: AnonysDev.sln  AnonysDev.vcxproj  AnonysDev.vcxproj.filters  main.cpp
ext/anonys/: FsmCore.cpp  FsmCore.h  Timer.h  TracingService.h  Types.h  Utils.h
img/: anonys_repository_structure.drawio  fsm_basic_structure.drawio  fsm_stack_architecture.drawio  fsm_stack_flow.drawio  fsm_terminals_structure.drawio
(+253 files in other folders)
